# zego-flutter-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  README_zh.md  pubspec.yaml  zego_defines.h  zego_live_view_plugin.dart
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/libs/: VERSION.txt
android/libs/arm64-v8a/include/: audio_capture.h  video_capture.h  zego-api-sdk-property.h
android/libs/armeabi-v7a/include/: zego-api-sdk-property.h
android/libs/x86/include/: audio_in_output.h  media_player.h  video_format.h
android/libs/x86_64/include/: media_player.h
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: zego_log_jni.cpp
android/src/main/java/com/zego/zegoliveroomplugin/: ZegoLiveRoomPlugin.java  ZegoLogJNI.java  ZegoPlatformView.java  ZegoPlatformViewFactory.java  ZegoViewRenderer.java
android/src/main/java/com/zego/zegoliveroomplugin/constants/: ZegoEventType.java
android/src/main/java/com/zego/zegoliveroomplugin/module/audioplayer/: IZegoAudioPlayerControllerCallback.java  ZegoAudioPlayerController.java
android/src/main/java/com/zego/zegoliveroomplugin/module/mediaplayer/: IZegoMediaPlayerControllerCallback.java  ZegoMediaPlayerController.java
android/src/main/java/com/zego/zegoliveroomplugin/utils/: ZegoFileHelper.java
example/: .gitignore  README.md  pubspec.yaml
ios/: zegoliveroom_plugin.podspec
lib/: zego_liveroom.dart  zego_liveroom_player.dart  zego_liveroom_publisher.dart  zego_media_side_info.dart  (+1 more)
(+185 files in other folders)
